--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
-    "@mastra/core": "^0.10.5",
+    "@mastra/core": "^0.10.12",
     "@mastra/libsql": "^0.10.2",
     "@mastra/loggers": "^0.10.2",
     "@mastra/memory": "^0.10.3",
+    "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "ollama-ai-provider": "^1.2.0",
     "zod": "^3.25.67"
